--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm run build:css && node ./bin/www",
+    "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -11,14 +12,9 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "yarn": "^1.21.1"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "tailwindcss": "^1.1.4"
-  },
-  "scripts": {
-    "start": "yarn build:css && node ./bin/www",
-     "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css"
   }
 }
