--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "postcss": "^7.0.26",
     "tailwindcss": "^1.1.4"
   }
 }
